Hide opens module warning during UTs